--- a/demo/Demo.lpi
+++ b/demo/Demo.lpi
@@ -54,7 +54,9 @@
       <Unit>
         <Filename Value="uFind.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="Frm_Find"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
       </Unit>
     </Units>
   </ProjectOptions>
